# Nexus

./: .codex  .gitignore  .markdownlint.json  .pylintrc  .windsurf  AGENTS.md  BUILD_AND_RELEASE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  Nexus  Nexus Build.txt  Nexus.dmg  Nexus.progress.md  Nexus.spec  README.md  SECURITY.md  SECURITY_OWNERSHIP.md  SUGGESTIONS.md  WARP.md  Windsurf.code-workspace  build.sh  dmg-config.json  entitlements.plist  mcp.json  pyproject.toml  pyrightconfig.json  requirements-tools.txt  requirements.txt  ruff.ci.toml  run_preview.sh  setup.py  skills  version_bump.py
.agent/skills/: ui-ux-pro-max
.agent/skills/ui-ux-pro-max/: SKILL.md
.agent/skills/ui-ux-pro-max/scripts/: core.py  design_system.py  search.py
.codex/environments/: environment.toml
.codex/skills/ui-ux-pro-max/: SKILL.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-version.yml  ci.yml  pylint.yml  pylint.yml.backup_1765277878  ruff.yml  shared-ci.yml
.shared/ui-ux-pro-max/scripts/: core.py  design_system.py  search.py
.skills/: ui-ux-pro-max
.ui-ux-pro-max/skills/ui-ux-pro-max/: SKILL.md
.windsurf/: rules.json
.windsurf/rules/: .windsurfrules  workspace.md
.windsurf/skills/: ui-ux-pro-max.md
.windsurf/workflows/: debug.md  ui-ux-pro-max.md
assets/icons/: Nexus.icns
docs/: CHANGELOG.md  DMG_BUILD_README.md
docs/improved-url-extraction/: design.md  requirements.md  tasks.md
docs/superpowers/plans/: 2026-07-16-bookmark-groups.md
docs/superpowers/specs/: 2026-07-16-bookmark-groups-design.md
nexus/: __init__.py  main.py
resources/: Nexus.icns
specs/improved-url-extraction/: requirements.md
src/: Main.py
src/nexus/: main.py
src/nexus/applescript/: __init__.py  builder.py  poller.py
src/nexus/core/: bookmarks.py  config.py  group_store.py  link_converter.py  models.py  safari.py
src/nexus/gui/: __init__.py  main_window.py  widgets.py
src/nexus/gui/dialogs/: __init__.py  new_folder_dialog.py  save_group_dialog.py
src/nexus/gui/widgets/: __init__.py  _base.py  group_row_delegate.py  quick_save_panel.py
src/nexus/utils/: path_helpers.py  url_processor.py
src/scripts/: icon_generator.py  version_bump.py
tests/: conftest.py  test_bookmarks.py  test_core_logic.py  test_gui.py  test_imports.py  test_main.py  test_search.py  test_smoke.py  test_url_processor.py
tests/core/: test_async_worker.py  test_bookmark_accent.py  test_bookmark_group_markers.py  test_config_logging.py  test_group_store.py  test_link_converter.py  test_models_group.py  test_safari_controller.py  test_safari_controller_core.py
tests/gui/: test_group_row_paint.py  test_new_folder_dialog.py  test_quick_save.py  test_save_group_dialog.py  test_sidebar_reorder.py  test_widget_skin.py
tests/utils/: test_path_helpers.py  test_url_processor.py
utils/: icon_generator.py
