# ============================================================================
# NEXUS - DESKTOP APPLICATION
# ============================================================================
# This pyproject.toml follows RazorBackRoar workspace standards
# Last Updated: 2026-01-28
# Python Version: 3.14.x (STRICT LOCK - never upgrade)
# ============================================================================

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nexus*"]

[project]
name = "nexus"
version = "3.12.9"
description = "Nexus desktop bookmark and URL manager"
requires-python = "==3.14.*"
# WHY: Strictly locked to Python 3.14

dependencies = [
    "PySide6>=6.6.0,<7.0.0",
    "Pillow>=10.0.0",
    "razorcore",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["nexus"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ty.src]
exclude = [
    ".agent/**",
    ".shared/**",
]

[tool.ty.analysis]
allowed-unresolved-imports = ["razorcore.threading"]

[tool.ty.environment]
extra-paths = [
    "src",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[tool.uv.sources]
razorcore = { path = "../.razorcore", editable = true }
