# ============================================================================
# NEXUS - DESKTOP APPLICATION
# ============================================================================
# This pyproject.toml follows RazorBackRoar workspace standards
# Last Updated: 2026-01-28
# Python Version: 3.14 primary (best-effort source compatibility 3.14)
# ============================================================================

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nexus*"]

[project]
name = "nexus"
version = "2.0.0"
description = "Nexus desktop bookmark and URL manager"
requires-python = "==3.14.*"
# WHY: Native dev/build target is 3.14, with source compatibility for 3.14.

dependencies = [
    "PySide6>=6.6.0,<7.0.0",
    "Pillow>=10.0.0",
    "razorcore>=1.211.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["nexus"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ty.src]
exclude = [
    ".agent/**",
    ".shared/**",
]

[tool.ty.environment]
extra-paths = [
    "src",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.uv.sources]
razorcore = { path = "../.razorcore", editable = true }
